acréscimo de title nos ícones de menu

--- a/index.html
+++ b/index.html
@@ -114,16 +114,15 @@
 
 	<div class="Mdireita">
  
-     <div class="icon">                    
+     <div class="icon">         
             
-             <a href="#objetivo" target="_self" class="icon-afastamento"><img src="img/objetivos.png" width="32" height="32"></a>
-             <a href="#resumo" target="_self" class="icon-afastamento"><img src="img/resumos.png" width="32" height="32"></a>
-             <a href="#cursos" target="_self" class="icon-afastamento"><img src="img/cursos.png" width="32" height="32"></a>
-             <a href="#experiencias" target="_self" class="icon-afastamento"><img src="img/experiencias.png" width="32" height="32"></a>
-             <a href="#formacao" target="_self" class="icon-afastamento"><img src="img/graduacaos.png" width="32" height="32"></a>
-             <a href="#habilidades" target="_self" class="icon-afastamento"><img src="img/habilidades.png" width="32" height="32">            															             
-             <a href="#idiomas" target="_self" class="icon-afastamento"><img src="img/idiomas.png" width="32" height="32"></a>
-             <a href="#outros" target="_self" class="icon-afastamento"><img src="img/hobbies.png" width="32" height="32"></a>
+             <a href="#objetivo" target="_self" class="icon-afastamento"><img src="img/objetivos.png" alt="objetivos" title="OBJETIVOS" width="32" height="32"></a>
+             <a href="#resumo" target="_self" class="icon-afastamento"><img src="img/resumos.png" alt="resumo" title="RESUMO" width="32" height="32"></a>
+             <a href="#cursos" target="_self" class="icon-afastamento"><img src="img/cursos.png" alt="cursos" title="CURSOS" width="32" height="32"></a>
+             <a href="#experiencias" target="_self" class="icon-afastamento"><img src="img/experiencias.png" alt="experiencias" title="EXPERIÊNCIAS PROFISSIONAIS" width="32" height="32"></a>
+             <a href="#formacao" target="_self" class="icon-afastamento"><img src="img/graduacaos.png" alt="formacao" title="FORMAÇÃO ACADÊMICA" width="32" height="32"></a>
+             <a href="#habilidades" target="_self" class="icon-afastamento"><img src="img/habilidades.png" alt="habilidades" title="HABILIDADES ESPECÍFICAS" width="32" height="32">           										<a href="#idiomas" target="_self" class="icon-afastamento"><img src="img/idiomas.png" alt="idiomas" title="IDIOMAS" width="32" height="32"></a>
+             <a href="#outros" target="_self" class="icon-afastamento"><img src="img/hobbies.png" alt="hobbies" title="HOBBIES/INTERESSES" width="32" height="32"></a>
 
              </div><br><br>
 <main>
@@ -131,7 +130,7 @@
          <section id="objetivo">
             <h3>OBJETIVO</h3>
             <div class="t">
-            <p>Atuar na área de Desevolvimento/Programação <span lang="en">Front-End/Back-End</span>, e aprender o máximo possível.</p></div>
+            <p>Atuar na área de Desenvolvimento/Programação <span lang="en">Front-End/Back-End</span>, e aprender o máximo possível.</p></div>
         
         </section>
 
